--- a/style.css
+++ b/style.css
@@ -1569,7 +1569,7 @@ nav ul {
     .carousel {
         display: flex;
         width: 100%;
-        animation: pri-slide 90s infinite;
+        animation: pri-slide 70s infinite;
         /* Ajuste a duração da animação conforme necessário */
         transition: transform 0.5s ease;
         /* Transição suave ao mudar a posição */
@@ -1584,80 +1584,32 @@ nav ul {
             transform: translateX(0);
         }
 
-        5% {
+        15% {
             transform: translateX(0);
         }
 
-        10% {
-            transform: translateX(-101%);
-        }
-
-        15% {
-            transform: translateX(-101%);
-        }
-
-        20% {
-            transform: translateX(-201%);
-        }
-
-        25% {
-            transform: translateX(-201%);
-        }
-
         30% {
-            transform: translateX(-303%);
-        }
-
-        35% {
-            transform: translateX(-303%);
-        }
-
-        40% {
-            transform: translateX(-404%);
+            transform: translateX(-100%);
         }
 
         45% {
-            transform: translateX(-404%);
-        }
-
-        50% {
-            transform: translateX(-505%);
-        }
-
-        55% {
-            transform: translateX(-505%);
+            transform: translateX(-100%);
         }
 
         60% {
-            transform: translateX(-606%);
-        }
-
-        65% {
-            transform: translateX(-606%);
-        }
-
-        70% {
-            transform: translateX(-708%);
+            transform: translateX(-200%);
         }
 
         75% {
-            transform: translateX(-708%);
+            transform: translateX(-200%);
         }
 
         80% {
-            transform: translateX(-810%);
-        }
-
-        85% {
-            transform: translateX(-810%);
+            transform: translateX(-230%);
         }
 
         90% {
-            transform: translateX(-910%);
-        }
-
-        95% {
-            transform: translateX(-910%);
+            transform: translateX(-230%);
         }
 
         100% {
@@ -1675,7 +1627,7 @@ nav ul {
         flex: 0 0 300px;
         width: 270px;
         height: 550px;
-        margin-right: 50px;
+        margin-right: 80px;
         background-color: #f0f0f0;
         display: flex;
         flex-direction: column;
@@ -1815,62 +1767,22 @@ nav ul {
 
     }
 
-    /* Parte footer Texto home mais vantagens*/
-
-    #Texto1 h2 {
-        margin-top: 30px;
-        font-family: "Dosis", sans-serif;
-        font-size: 2em;
-        color: var(--Branco);
-        text-align: center;
-        font-weight: 600;
-
-    }
+    /* Quero fazer uma separação de 2 colunas sendo que as duas colunas terão a mesma quantidade de itens */
 
     .container {
         display: flex;
-        background-color: #a80f2d;
-        margin-top: -20px;
-        padding: 0px 0px 20px 0px;
-        padding-right: 30px;
-        padding-left: 30px;
-        flex-direction: column;
-        text-align: center;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        padding-right: 100px;
+        padding-left: 100px;
     }
 
     .CardVantagem {
-        flex-direction: column;
         display: flex;
-        align-items: center;
-        border: var(--Branco) solid 1px;
-        background-color: #a80f2d;
-        padding: 40px 0px;
-        margin-top: 50px;
-        text-align: center;
-
-    }
-
-    .CardVantagem img {
-
-        margin-top: -20px;
-        margin-bottom: 10px;
-        width: 100px;
-        height: 105px;
-    }
-
-    .texto3 h3 {
-        text-align: center;
-        color: var(--Branco);
-        margin-bottom: 15px;
-        width: auto;
-
-    }
-
-    .texto3 p {
-
-        text-align: center;
-        color: var(--Branco);
-        width: 300px;
+        margin: 30px 30px 20px 30px;
+        padding-right: 45px;
+        padding-left: 45px;
     }
 
     /* Parte footer Botão home*/
@@ -1987,6 +1899,12 @@ nav ul {
     .Container,
     .ContainerEx {
         max-width: 1360px;
+    }
+
+    .CardVantagem,
+    .texto3 {
+        flex: 1;
+        max-width: unset;
     }
 
     /* Cabeçalho */
