--- a/style.css
+++ b/style.css
@@ -491,14 +491,14 @@ footer {
 .Card2 {
     margin: -100px 0px -100px 0px;
     margin-top: 30px;
-    width: 400px;
+    max-width: 400px;
     height: 520px;
     text-align: center;
 }
 
 .Card2 img {
     margin: -80px 0px 10px 0px;
-    width: 300px ;
+    max-width:300px ;
     height: auto;
     /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.9); */
 }
