--- a/style.css
+++ b/style.css
@@ -1702,13 +1702,13 @@ nav ul {
     }
 
     .conteudo-topo {
-        margin: 50px 0px 0px 0px;
+        margin: 45px 0 0 0;
         align-items: center;
     }
 
     .conteudo-topo p {
         display: flex;
-        margin: 16px 0;
+        margin: 24px 0;
         max-width: 500px;
     }
 
