--- a/style.css
+++ b/style.css
@@ -322,12 +322,9 @@ footer {
 .carousel {
     display: flex;
     width: 100%;
-    animation: pri-slide 90s infinite;
-    /* Ajuste a duração da animação conforme necessário */
-    transition: transform 0.5s ease;
-    /* Transição suave ao mudar a posição */
-    margin-left: 10px;
-    /* Adiciona espaço à esquerda */
+    animation: pri-slide 90s infinite; /* Ajuste a duração da animação conforme necessário */
+    transition: transform 0.5s ease; /* Transição suave ao mudar a posição */
+    margin-left: 10px; /* Adiciona espaço à esquerda */
     height: 560px;
     z-index: -1;
 }
